# Clean_Robot

./: README.md
full_coverage/: CMakeLists.txt  package.xml
full_coverage/include/: CleaningPathPlanner.h
full_coverage/launch/: clean_work.launch  indoorshed.launch  slam_with_amcl.launch
full_coverage/launch/include/: move_base.launch.xml  robot_amcl.launch.xml
full_coverage/param/: cleaning_costmap_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  navfn_global_planner_params.yaml
full_coverage/rviz/: clean_view.rviz
full_coverage/src/: CleaningPathPlanner.cpp  PathPlanningNode.cpp  next_goal.cpp
full_coverage/world/my_ground_plane/: model.sdf
full_coverage/world/my_ground_plane/materials/scripts/: my_ground_plane.material
full_coverage/world/shed/: model.sdf
multi_goals/: CMakeLists.txt  package.xml
multi_goals/include/multi_goals/: multi_goals.h
multi_goals/launch/: multi_goals.launch  slam_view_amcl.launch
multi_goals/launch/include/: move_base.launch.xml  robot_amcl.launch.xml
multi_goals/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
multi_goals/rviz/: multi_goals_view.rviz
multi_goals/src/: multi_goals.cpp
mw-exploration/exploration_master/: CMakeLists.txt  package.xml
mw-exploration/exploration_msgs/: package.xml
mw-exploration/exploration_msgs/action/: Explore.action
mw-exploration/mw-exploration/: CMakeLists.txt  package.xml
mw-exploration/mw-exploration/config/: Explore.cfg
mw-exploration/mw-exploration/include/explore/: costmap_client.h  explore_server.h  frontier_search.h  geometry_tools.h  plugin_client.h
mw-exploration/mw-exploration/launch/: explore.launch  explore_costmap.launch  indoorshed.launch  slam.launch  slam_view.launch
mw-exploration/mw-exploration/launch/include/: gmapping.launch.xml  hector.launch.xml  karto.launch.xml  move_base.launch.xml
mw-exploration/mw-exploration/launch/test/: test_gmapping.launch  test_hector.launch  test_karto.launch
mw-exploration/mw-exploration/map/: test.pgm  test.yaml
mw-exploration/mw-exploration/map/test/: gm1.pgm  gm1.yaml  gm2.pgm  gm2.yaml  gm3.pgm  gm3.yaml  gm4.pgm  gm4.yaml  gm5.pgm  gm5.yaml  h1.pgm  h1.yaml  h2.pgm  h2.yaml  h3.pgm  h3.yaml  h4.pgm  h4.yaml  h5.pgm  h5.yaml  k1.pgm  k1.yaml  k2.pgm  k2.yaml  k3.pgm  k3.yaml  k4.pgm  k4.yaml  k5.pgm  k5.yaml
mw-exploration/mw-exploration/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml
mw-exploration/mw-exploration/robot/xacro/: kbot.xacro  kbot_base.xacro  kbot_with_laser_gazebo.xacro
mw-exploration/mw-exploration/robot/xacro/gazebo/: kbot_base_gazebo.xacro  kbot_gazebo.xacro
mw-exploration/mw-exploration/rviz/: explore_view.rviz
mw-exploration/mw-exploration/src/: costmap_client.cpp  explore_server.cpp  frontier_search.cpp  plugin_client.cpp
mw-exploration/mw-exploration/world/indoorShed/: model.config  model.sdf
mw-exploration/mw-exploration/world/my_ground_plane/: model.config
mw-exploration/mw-exploration/world/shed/: model.config
mw-exploration/mw-exploration/worlds/: indoorShed.world  shed.world
mw-exploration/polygon_layer/: CMakeLists.txt  package.xml
mw-exploration/polygon_layer/include/polygon_layer/: polygon_layer.h
mw-exploration/polygon_layer/src/: polygon_layer.cpp
show_trajectory/: CMakeLists.txt  package.xml
show_trajectory/launch/: show_trajectory.launch
show_trajectory/src/: show_trajectory.cpp
