<?xml version="1.0"?>
<package format="2">
  <name>multi_goals</name>
  <version>0.0.0</version>
  <description>The multi_goals package</description>

  <author email="yaepiii@126.com">Jia Yanpeng</author>
  <maintainer email="yaepiii@126.com">Jia Yanpeng</maintainer>
  <license>Proprietary</license>


  <buildtool_depend>catkin</buildtool_depend>


  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>actionlib_msgs</depend>


</package>
